blocks/Features.module.css
.container {

}

.header {
  max-width: var(--section-header-max-width);
  margin: 0 auto;
  margin-bottom: 64px;
}

.title {
  font-size: var(--h1-font-size);
  font-weight: var(--h1-font-weight);
  line-height: var(--h1-line-height);
  letter-spacing: var(--h1-letter-spacing);
  text-align: center;
  margin-bottom: 16px;
}

.subtitle {
  font-size: var(--body-font-size);
  font-weight: var(--body-font-weight);
  line-height: var(--body-line-height);
  letter-spacing: var(--body-letter-spacing);
  text-align: center;
  color: var(--text-shade);
}

.features {
  list-style: none;
  padding: 0;
  margin: 0;
  margin-bottom: -48px; /* Hack for bottom margin */
}

.feature {
  max-width: var(--list-item-max-width);
  margin: 0 auto;
  margin-bottom: 48px;
}

.feature-illustration {
  width: 92px;
  height: 92px;
  background: #eee;
  border-radius: 28px;
}

.feature-content {
  margin-top: 16px;
}

.feature-title {
  font-size: var(--h3-font-size);
  font-weight: var(--h3-font-weight);
  line-height: var(--h3-line-height);
  letter-spacing: var(--h3-letter-spacing);
  margin-bottom: 8px;
}

.feature-text {
  color: var(--text-shade);
}

@media screen and (min-width: 800px) {
  .features {
    display: flex;
    align-items: stretch;
    justify-content: stretch;
    flex-flow: row wrap;
    margin-right: -64px; /* Hack for right margin */
  }
  .feature {
    flex: 1 1 0;
    margin-right: 64px;
    min-width: var(--list-item-max-width);
  }
}

